--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ducheetah</title>
+    <title>lecheetah</title>
   </head>
   <body class="dark:bg-[#2d2d41] bg-[#f8f8f2] text-[#282a36] dark:text-[#f8f8f2]">
     <div id="root"></div>
